--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p>5 questions and the 5 solas The Cripplegate. (2014). 5 questions and the 5 solas. [online] Available at: http://thecripplegate.com/5-questions-and-the-5-solas/ [Accessed 9 Nov. 2017].</p>
     </div>
   </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="jq.js"></script>
   <script type="text/javascript">
   $(document ).ready(function() {
   $(".minfo").hide();
